syntax = "proto3"; // 表明使用protobuf的编译器最新的版本为v3

package phonedata; // proto自己的包  类似于命名空间

option java_package = "com.qzy.tt.data"; //生成java文件的包名
option java_outer_classname = "CallPhoneProtos"; //生成的类名

message CallPhone {
    string ip = 1;


    enum PhoneCommand {
        NONE = 0;
        CALL = 1;
        HUANGUP = 2;
    }


    string phoneNumber = 2;
    PhoneCommand phonecommand = 3;


}

