syntax = "proto3"; // 表明使用protobuf的编译器最新的版本为v3

package phonedata; // proto自己的包  类似于命名空间

option java_package = "com.qzy.tt.data"; //生成java文件的包名
option java_outer_classname = "TtCallRecordProtos"; //生成的类名

message TtCallRecordProto {
   bool request = 1;
   bool response = 2;

   message CallRecord{
      int64 id = 1;
      string phoneNumber = 2;
      string name = 3;
      string address = 4;
      int32 type = 5;
      string date = 6;
      int64 duration =7;
   }

   repeated CallRecord callRecord = 3;
}