syntax = "proto3"; // 表明使用protobuf的编译器最新的版本为v3

package phonedata; // proto自己的包  类似于命名空间

option java_package = "com.qzy.tt.data"; //生成java文件的包名
option java_outer_classname = "TtDeleCallLogProtos"; //生成的类名

message TtDeleCallLog {
    string ip = 1;

    bool isDeleAll = 2;   //   是否删除全部

    int64 server_data_id = 3;  // 删除单个id

    string phonenumber = 4;   // 删除phone number 关联的所有记录

    bool isResponse = 5;   // 是否 是服务端回复手机端

    bool state = 6;  // 操作结果返回

}

