syntax = "proto3"; // 表明使用protobuf的编译器最新的版本为v3

package phonedata; // proto自己的包  类似于命名空间

option java_package = "com.qzy.tt.data"; //生成java文件的包名
option java_outer_classname = "TtPhoneMobileDataProtos"; //生成的类名

message TtPhoneMobileData {

    bool isEnableData = 1;    //应用端请求服务端打开开关状态
    bool responseStatus = 2;  //服务端打开数据流量是否成功
}

