syntax="proto3";    // 表明使用protobuf的编译器最新的版本为v3

package phonedata;  // proto自己的包  类似于命名空间

option java_package = "com.qzy.tt.data";            //生成java文件的包名
option java_outer_classname = "TtPhonePositionProtos";  //生成的类名

message TtPhonePosition{
    bool isOpen = 1; //gps 开关
    string lat_itude = 2; //纬度
    string long_itude = 3; //经度
    bool request_status = 4; //请求状态
    bool response_status = 5; //响应状态
}
