syntax = "proto3"; // 表明使用protobuf的编译器最新的版本为v3

package phonedata; // proto自己的包  类似于命名空间

option java_package = "com.qzy.tt.data"; //生成java文件的包名
option java_outer_classname = "TtPhoneUpdateSendFileProtos"; //生成的类名

message UpdateSendFile {
    string ip = 1;

    message PFile {
        string filename = 1;
        uint32 size = 2;
        bytes data = 3;
    }

    PFile fileData = 2;

    bool isSendFileFinish = 3;
}

