syntax = "proto3"; // 表明使用protobuf的编译器最新的版本为v3

package phonedata; // proto自己的包  类似于命名空间

option java_package = "com.qzy.tt.data"; //生成java文件的包名
option java_outer_classname = "TtShortMessageProtos"; //生成的类名

message TtShortMessage {
    bool request = 1;
    bool response = 2;

    message ShortMessage {
        int64 id = 1;
        string numberPhone = 2;
        string message = 3;
        string time = 4;
        int32 type = 5;
        string name = 6;
        bool isRead = 7;//是否已读
    }

    repeated ShortMessage shortMessage = 3;
}